--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,17 @@ on:
 
 jobs:
   sonarcloud:
+    
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
+      - name: Install Sonar Scanner
+        run: |
+          sudo apt-get install -y unzip
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.1.4188-linux.zip
+          unzip sonar-scanner-cli-4.7.1.4188-linux.zip
+          export PATH=$PATH:$PWD/sonar-scanner-4.7.1.4188-linux/bin
+
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up Node.js
@@ -25,3 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
