--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.SONAR_PROJECT_KEY=pg-hanalei_sonar-test
-sonar.SONAR_ORGANIZATION=pg-hanalei
+sonar.projectKey=pg-hanalei_sonar-test
+sonar.organization=pg-hanalei
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=sonar-test
