--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,8 @@ sonar.organization=pg-hanalei
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
 
-sonar.test.inclusions=**/*.test.ts
+sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
+sonar.exclusions=**/*.test.ts,**/*.test.tsx
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
