create add function test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,5 @@ sonar.exclusions=**/*.test.ts,**/*.test.tsx
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov.info
