create add function test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,13 @@ sonar.sources=src
 sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
 sonar.exclusions=**/*.test.ts,**/*.test.tsx
 
+sonar.typescript.file.suffixes=.ts,.tsx
+
+sonar.testExectionReportPaths=test-report.xml
+
+
+
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov-report/lcov.info
