create add function test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.exclusions=**/*.test.ts,**/*.test.tsx
 
 sonar.typescript.file.suffixes=.ts,.tsx
 
-sonar.testExecutionReportPaths=test-report.xml
+sonar.testExecutionReportPaths=/.github/workflows/test-report.xml
 
 
 # Encoding of the source code. Default is default system encoding
