--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "jest-junit": "^16.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false --ci --reporters=default --reporters=jest-junit",
     "eject": "react-scripts eject",
     "sonar": "sonar-scanner"
   },
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "jest-sonar": "^0.2.16",
     "jest-sonar-reporter": "^2.0.0"
   }
 }
