--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,15 @@ sonar.organization=pg-hanalei
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
 
+sonar.test.inclusions=**/*.test.ts,**/*.test.tsx
+sonar.exclusions=**/*.test.ts,**/*.test.tsx
+
+sonar.typescript.file.suffixes=.ts,.tsx
+
+# sonar.testExecutionReportPaths=test-report.xml
+
+
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
