--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false --ci --reporters=default",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "sonar": "sonar-scanner"
   },
