--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,10 +14,12 @@ sonar.exclusions=**/*.test.ts,**/*.test.tsx
 
 sonar.typescript.file.suffixes=.ts,.tsx
 
+# lcovだけでよかった？
 # sonar.testExecutionReportPaths=test-report.xml
 
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
+# sonar qubeにテスト情報を渡す
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
