--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,3 +23,6 @@ sonar.typescript.file.suffixes=.ts,.tsx
 
 # sonar qubeにテスト情報を渡す
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+# TODOhはsmellに含めない
+sonar.issue.ignore.multicriteria.e1.comment=TODO
