--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,4 +25,7 @@ sonar.typescript.file.suffixes=.ts,.tsx
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # TODOhはsmellに含めない
+sonar.issue.ignore.multicriteria=e1
+sonar.issue.ignore.multicriteria.e1.ruleKey=comment
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.js
 sonar.issue.ignore.multicriteria.e1.comment=TODO
