--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,6 +26,6 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # TODOhはsmellに含めない
 sonar.issue.ignore.multicriteria=e1
-sonar.issue.ignore.multicriteria.e1.ruleKey=comment
+sonar.issue.ignore.multicriteria.e1.ruleKey=squid:TodoTagPresence
 sonar.issue.ignore.multicriteria.e1.resourceKey=/**/*.ts,/**/*.tsx
 sonar.issue.ignore.multicriteria.e1.comment=TODO
