--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,8 +24,9 @@ sonar.typescript.file.suffixes=.ts,.tsx
 # sonar qubeにテスト情報を渡す
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-# TODOhはsmellに含めない
+# TODOはsmellに含めない
 sonar.issue.ignore.multicriteria=e1
-sonar.issue.ignore.multicriteria.e1.ruleKey=squid:TodoTagPresence
+sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S1135
 sonar.issue.ignore.multicriteria.e1.resourceKey=/**/*.ts,/**/*.tsx
 sonar.issue.ignore.multicriteria.e1.comment=TODO
+
