--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,6 +27,5 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # TODOはsmellに含めない
 sonar.issue.ignore.multicriteria=e1
 sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S1135
-sonar.issue.ignore.multicriteria.e1.resourceKey=/**/*.ts,/**/*.tsx
-sonar.issue.ignore.multicriteria.e1.comment=TODO
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.ts,**/*.tsx
 
