--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,4 +24,5 @@ sonar.typescript.file.suffixes=.ts,.tsx
 # sonar qubeにテスト情報を渡す
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
+# TODOはsmellに含めないことはSQ側で設定する
 
