--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,4 +26,4 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # TODOはsmellに含めないことはSQ側で設定する
 
-sonar.coverage.exclusions=utils.ts
+sonar.coverage.exclusions=**/utils.ts
